--- a/app/index.html
+++ b/app/index.html
@@ -19,13 +19,12 @@
       </a>
 
       <nav class="navigation" id="navigation">
-      
         <a aria-label="mobile menu" class="navigation-mobile">
           <span></span>
           <span></span>
           <span></span>
         </a>
-        
+
         <div class="navigation-desktop">
           <a class="navigation-desktop__item" href="#about">About us</a>
           <a class="navigation-desktop__item" href="#solutions">Solutions</a>
@@ -37,37 +36,208 @@
   </header>
 
   <main>
-    <section id="about">
+    <section id="home" class="home">
       <div class="container">
-        <h1>About</h1>
+        <p class="home__text"><span>We build</span> solutions<br>for Machine Generated<br>Data & Industrial IoT</p>
+        <a href="#contact" class="home__startbtn blue-link">Start the project</a>
       </div>
     </section>
 
-    <section id="solutions">
+    <section id="about" class="about">
       <div class="container">
-        <h1>Solutions</h1>
+        <div class="about-content">
+          <p class="about-content-text">
+            Focus on one domain — Machine Generated Data.<br>
+            We provide <a href="#technology" class="about-content-text__link">Data Science</a>
+            <span>,</span>
+            <a href="#technology" class="about-content-text__link">Data Engineering</a>and<br>
+            <a href="#technology" class="about-content-text__link">IoT development</a> services to yield value from
+            data:<br>
+            OPEX improvement, uptime, decisions quality.
+          </p>
+          <a href="#about" class="about-content__link blue-link">Read more about us</a>
+        </div>
       </div>
     </section>
 
-    <section id="technology">
+    <section id="howitworks" class="howitworks">
       <div class="container">
-        <h1>Technology</h1>
+        <h2 class="howitworks__caption">How it works</h2>
+        <div class="howitworks-options">
+          <div class="howitworks-options-bullet">
+            <p class="howitworks-options-bullet__caption">talk</p>
+            <p class="howitworks-options-bullet__item">Discuss your ideas or problems</p>
+            <p class="howitworks-options-bullet__item">We are open to grab
+              a cup of coffee and think through the new case</p>
+          </div>
+          <div class="howitworks-options-bullet">
+            <p class="howitworks-options-bullet__caption">Propose Roadmap</p>
+            <p class="howitworks-options-bullet__item">Conduct Requirements and Data analysis</p>
+            <p class="howitworks-options-bullet__item">Articulate tradeoffs</p>
+            <p class="howitworks-options-bullet__item">Set the expectation baselines</p>
+            <p class="howitworks-options-bullet__item">Prepare project plan</p>
+          </div>
+          <div class="howitworks-options-bullet">
+            <p class="howitworks-options-bullet__caption">Deliver Pilot Product</p>
+            <p class="howitworks-options-bullet__item">Stay lean</p>
+            <p class="howitworks-options-bullet__item">Validate hypothesises and concepts with minimal investments</p>
+            <p class="howitworks-options-bullet__item">Analyse the feedback</p>
+          </div>
+          <div class="howitworks-options-bullet">
+            <p class="howitworks-options-bullet__caption">Scale</p>
+            <p class="howitworks-options-bullet__item">Deploy solution to the production environment</p>
+            <p class="howitworks-options-bullet__item">Integrate with exisiting infrastructure</p>
+            <p class="howitworks-options-bullet__item">Improve and optimize</p>
+          </div>
+        </div>
       </div>
     </section>
 
-    <section id="contact">
+    <section id="solutions" class="solutions">
       <div class="container">
-        <h1>Contact</h1>
+        <h2 class="solutions__caption">Solutions</h2>
+        <div class="solutions-grid">
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Predictive Maintenance</p>
+            <p class="solutions-grid-item__text">Predict the future health of equipment or an asset</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Condition Monitoring</p>
+            <p class="solutions-grid-item__text">Provide information about the equipment health</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Sensor data processing</p>
+            <p class="solutions-grid-item__text">Process different types of sensor data</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Smart HVAC</p>
+            <p class="solutions-grid-item__text">Minimise energy consumption footprint of the building</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Machine learning</p>
+            <p class="solutions-grid-item__text">Detect anomalies and recognize patterns in the raw data</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Embedded Development</p>
+            <p class="solutions-grid-item__text">Low-level programming for Sensors, PLCs, Gateways, and other IoT
+              devices</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">DATA PROCESSING</p>
+            <p class="solutions-grid-item__text">Scalable solutions to establish data flow from field to the cloud
+            </p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="solutions-grid-item">
+            <p class="solutions-grid-item__caption">Visualisations and Dashboards</p>
+            <p class="solutions-grid-item__text">Custom reporting and data exploration tools</p>
+            <a href="" class="solutions-grid-item__link blue-link">Read more</a>
+          </div>
+        </div>
       </div>
     </section>
+
+    <section id="technology" class="technology">
+      <div class="container">
+        <h2 class="technology__caption">Technology stacks</h2>
+        <p class="technology__subcaption">We use proven tools and frameworks to build and run data infrastructure</p>
+        <div class="technology-grid">
+          <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Computation</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Storage</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Modelling</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Visualisation</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Embedded</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="contact" class="contact">
+      <div class="container">
+        <div class="contact-content">
+
+          <div class="contact-content-info">
+            <h2 class="contact-content-info__caption caption">Contact us</h2>
+            <p class="contact-content-info__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+              eiusmod tempor
+              consectetur</p>
+            <p class="contact-content-info__location text">United States 3030<br>
+              N. ROCKY POINT DR. STE 150A</p>
+            <p class="contact-content-info__location text">Ukraine, 15 Borisohlibska Str, Kyiv</p>
+            <address class="contact-content-info__email">
+              <a href="mailto:hello@arsdata.io" class="text">hello@arsdata.io</a>
+            </address>
+          </div>
+
+          <div class="contact-content-form">
+            <h2 class="contact-content-form__caption caption">Got questions? — get in touch</h2>
+            <p class="contact-content-form__text text">Send us your questions and we will get back to you as soon as
+              possible</p>
+
+            <form class="form" id="contact-form">
+              <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
+              <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
+              <div class="form-textarea-box">
+                <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3" placeholder="Message"
+                  required></textarea>
+                <button class="form-textarea-box__btn" id="submit-button">Send</button>
+              </div>
+              <div class="form-radio-box">
+                <p>
+                  <input class="form-radio-box__radio" type="checkbox" name="termsAndConditions"
+                    id="termsAndConditions">
+                  <label class="form-radio-box-lable" for="termsAndConditions">By clicking the button above, I agree
+                    with
+                    <a href="" target="_blanc" class="form-radio-box-lable__link">Terms of Service</a> and
+                    <a href="" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
+                </p>
+                </label>
+              </div>
+            </form>
+            <div id="formsubmit"></div>
+
+          </div>
+
+
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="container footer-content">
+        <a href="index.html" class="footer-content__logo">
+          <img src="images/logos/logo-blue.svg" alt="ARS Data logo">
+        </a>
+        <p class="footer-content__copyright">© 2019 ARS DATA</p>
+      </div>
+    </footer>
   </main>
 
 
   <!--build:js js/main.min.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
   <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.0/jquery-ui.min.js'></script>
-  <script src="js/lib/a-library.js"></script>
-  <script src="js/lib/another-library.js"></script>
+
   <script src="js/main.js"></script>
   <!-- endbuild -->
 </body>
