how it works  section adaptivity + content fixes

--- a/app/index.html
+++ b/app/index.html
@@ -38,21 +38,27 @@
   <main>
     <section id="home" class="home">
       <div class="container">
-        <p class="home__text"><span>We build</span> solutions<br>for Machine Generated<br>Data & Industrial IoT</p>
+        <p class="home-text">
+          <span class="home-text__part-1">We build solutions </span>
+          <span class="home-text__part-2">for Machine Generated </span>
+          <span class="home-text__part-3">Data & Industrial IoT</span>
+        </p>
         <a href="#contact" class="home__startbtn blue-link">Start the project</a>
+        <img class="home__mobile-img" src="images/home-bg-mobile.svg" alt="home mobile tech graphics">
       </div>
     </section>
 
     <section id="about" class="about">
       <div class="container">
         <div class="about-content">
+          <img class="about__mobile-img" src="images/aboutus-bg-mobile.svg" alt="about-us mobile tech graphics">
           <p class="about-content-text">
-            Focus on one domain — Machine Generated Data.<br>
+            Focus on one domain — Machine Generated Data.
             We provide <a href="#technology" class="about-content-text__link">Data Science</a>
             <span>,</span>
-            <a href="#technology" class="about-content-text__link">Data Engineering</a>and<br>
-            <a href="#technology" class="about-content-text__link">IoT development</a> services to yield value from
-            data:<br>
+            <a href="#technology" class="about-content-text__link">Data Engineering</a>and
+            <a href="#technology" class="about-content-text__link">Embedded development</a> services to yield value from
+            data:
             OPEX improvement, uptime, decisions quality.
           </p>
           <a href="#about" class="about-content__link blue-link">Read more about us</a>
@@ -104,7 +110,7 @@
           </div>
           <div class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Condition Monitoring</p>
-            <p class="solutions-grid-item__text">Provide information about the equipment health</p>
+            <p class="solutions-grid-item__text">Get current equipment health</p>
             <a href="" class="solutions-grid-item__link blue-link">Read more</a>
           </div>
           <div class="solutions-grid-item">
@@ -114,12 +120,12 @@
           </div>
           <div class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Smart HVAC</p>
-            <p class="solutions-grid-item__text">Minimise energy consumption footprint of the building</p>
+            <p class="solutions-grid-item__text">Minimize energy footprint of the building</p>
             <a href="" class="solutions-grid-item__link blue-link">Read more</a>
           </div>
           <div class="solutions-grid-item">
             <p class="solutions-grid-item__caption">Machine learning</p>
-            <p class="solutions-grid-item__text">Detect anomalies and recognize patterns in the raw data</p>
+            <p class="solutions-grid-item__text">Detect anomalies and patterns in the raw data</p>
             <a href="" class="solutions-grid-item__link blue-link">Read more</a>
           </div>
           <div class="solutions-grid-item">
@@ -149,6 +155,10 @@
         <p class="technology__subcaption">We use proven tools and frameworks to build and run data infrastructure</p>
         <div class="technology-grid">
           <div class="technology-grid-item">
+            <p class="technology-grid-item__caption">Embedded</p>
+            <a href="" class="technology-grid-item__link blue-link">Read more</a>
+          </div>
+          <div class="technology-grid-item">
             <p class="technology-grid-item__caption">Computation</p>
             <a href="" class="technology-grid-item__link blue-link">Read more</a>
           </div>
@@ -162,10 +172,6 @@
           </div>
           <div class="technology-grid-item">
             <p class="technology-grid-item__caption">Visualisation</p>
-            <a href="" class="technology-grid-item__link blue-link">Read more</a>
-          </div>
-          <div class="technology-grid-item">
-            <p class="technology-grid-item__caption">Embedded</p>
             <a href="" class="technology-grid-item__link blue-link">Read more</a>
           </div>
         </div>
