about us, solutions, tech pages done + slider done

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  
+
   <header class="header">
     <div class="container flex-between">
       <a href="index.html" class="header__logo">
@@ -39,68 +39,27 @@
 
   <main>
 
-    <section class="slider">
-      <div class="container">
-        <div class="glide">
-          <div class="glide__track" data-glide-el="track">
-            <ul class="glide__slides">
-              <li class="glide__slide">
-                <div class="slide-content slide-content-1">
-                  <h2 class="slide-content__title">Predictive Maintenance</h2>
-                  <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
-                  </p>
-                </div>
-                <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/predictive-maintenance.svg"
-                    alt="Predictive Maintenance illustration downgrade graphic with limit line">
-                </div>
-              </li>
-              <li class="glide__slide">
-                <div class="slide-content slide-content-1">
-                  <h2 class="slide-content__title">Predictive Maintenance</h2>
-                  <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
-                  </p>
-                </div>
-                <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/predictive-maintenance.svg"
-                    alt="Predictive Maintenance illustration downgrade graphic with limit line">
-                </div>
-              </li>
-              <li class="glide__slide">
-                <div class="slide-content slide-content-1">
-                  <h2 class="slide-content__title">Predictive Maintenance</h2>
-                  <p class="slide-content-text">
-                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
-                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
-                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
-                  </p>
-                </div>
-                <div class="slide-content slide-content-2">
-                  <img class="slide-content__img" src="./images/illustrations/predictive-maintenance.svg"
-                    alt="Predictive Maintenance illustration downgrade graphic with limit line">
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="glide-navigation">
-            <div class="glide__arrows" data-glide-el="controls">
-              <button class="glide__arrow glide__arrow--left" data-glide-dir="<"></button>
-              <button class="glide__arrow glide__arrow--right" data-glide-dir=">"></button>
-            </div>
-            <div class="glide-slides-numbers">
-              <span class="glide-slides-numbers__first"></span>
-              <div class="glide-slides-numbers-line">
-                <span class="glide-slides-numbers-line__fill"></span>
-              </div>
-              <span class="glide-slides-numbers__last"></span>
-            </div>
-          </div>
+    <section class="about-page">
+      <div class="container flex-between">
+
+        <div class="about-page-content about-page-content_1">
+          <h2 class="about-page-content-title">
+            <span class="about-page-content-title__part">About </span>
+            <span class="about-page-content-title__part">ars data</span>
+          </h2>
+        </div>
+        <div class="about-page-content about-page-content_2">
+          <p class="about-page-content__text">
+            We believe that Industrial Internet Of Things and machine -generated data are fundamental enablers to fuel
+            the
+            new industrial revolution.
+          </p>
+          <p class="about-page-content__text">
+            Systems based on data will allow to make a step change in OPEX improvement, uptime, situational awareness
+            and
+            decisions quality.
+          </p>
+          <a href="#contact" class="home__startbtn blue-link">Start the project</a>
         </div>
       </div>
     </section>
