--- a/app/technologies.html
+++ b/app/technologies.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  
+
   <header class="header">
     <div class="container flex-between">
       <a href="index.html" class="header__logo">
@@ -44,6 +44,20 @@
         <div class="glide">
           <div class="glide__track" data-glide-el="track">
             <ul class="glide__slides">
+              <li class="glide__slide">
+                <div class="slide-content slide-content-1">
+                  <h2 class="slide-content__title">Predictive Maintenance</h2>
+                  <p class="slide-content-text">
+                    <span class="slide-content-text__part">Predict the future health of equipment or an asset.</span>
+                    <span class="slide-content-text__part">Estimate Remaining Useful Life (RUL).</span>
+                    <span class="slide-content-text__part">Anticipate failure and performance degradation risks.</span>
+                  </p>
+                </div>
+                <div class="slide-content slide-content-2">
+                  <img class="slide-content__img" src="./images/illustrations/predictive-maintenance.svg"
+                    alt="Predictive Maintenance illustration downgrade graphic with limit line">
+                </div>
+              </li>
               <li class="glide__slide">
                 <div class="slide-content slide-content-1">
                   <h2 class="slide-content__title">Predictive Maintenance</h2>
