contacts page done

--- a/app/about-us.html
+++ b/app/about-us.html
@@ -7,9 +7,8 @@
   <title>ARS Data</title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/glide.core.css">
-  <link rel="stylesheet" href="css/glide.theme.css">
   <!--endbuild-->
+  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
 <body>
