--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- <link rel="stylesheet" href="css/var.css"> -->
   <!--endbuild-->
+  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png"/>
 </head>
 
 <body>
