--- a/app/services.html
+++ b/app/services.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/glide.core.css">
   <link rel="stylesheet" href="css/glide.theme.css">
   <!--endbuild-->
+  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
 <body>
