--- a/app/contacts.html
+++ b/app/contacts.html
@@ -7,12 +7,11 @@
   <title>ARS Data</title>
   <!--build:css css/styles.min.css-->
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/glide.core.css">
-  <link rel="stylesheet" href="css/glide.theme.css">
   <!--endbuild-->
+  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
-<body>
+<body id="contact-page">
 
   <header class="header">
     <div class="container flex-between">
@@ -39,67 +38,44 @@
 
   <main>
 
-    <section id="contact" class="contact">
-      <div class="container">
-        <div class="contact-content">
-
-          <div class="contact-content-info">
-            <h2 class="contact-content-info__caption caption">Contact us</h2>
-            <p class="contact-content-info__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-              eiusmod tempor
-              consectetur</p>
-            <p class="contact-content-info__location text">United States 3030<br>
-              N. ROCKY POINT DR. STE 150A</p>
-            <p class="contact-content-info__location text">Ukraine, 15 Borisohlibska Str, Kyiv</p>
-            <address class="contact-content-info__email">
-              <a href="mailto:hello@arsdata.io" class="text">hello@arsdata.io</a>
-            </address>
-          </div>
-
-          <div class="contact-content-form">
-            <h2 class="contact-content-form__caption contact-content-form__caption_desktop caption">Got questions? — get
-              in touch</h2>
-            <h2 class="contact-content-form__caption contact-content-form__caption_mobile caption">Got questions?</h2>
-            <p class="contact-content-form__text text">Send us your questions and we will get back to you as soon as
-              possible</p>
-
-            <form class="form" id="contact-form">
-              <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
-              <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
-              <div class="form-textarea-box">
-                <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3" placeholder="Message"
-                  required></textarea>
-                <button class="form-textarea-box__btn" id="submit-button">Send</button>
-              </div>
-              <div class="form-radio-box">
-                <p>
-                  <input class="form-radio-box__radio" type="checkbox" name="termsAndConditions"
-                    id="termsAndConditions">
-                  <label class="form-radio-box-lable" for="termsAndConditions">By clicking the button above, I agree
-                    with
-                    <a href="" target="_blanc" class="form-radio-box-lable__link">Terms of Service</a> and
-                    <a href="" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
-                </p>
-                </label>
-              </div>
-            </form>
-            <div id="formsubmit"></div>
-
-          </div>
-
-
+    <section class="contact-page">
+      <div class="container flex-between">
+        <div class="contact-page-content contact-page-content_1">
+          <h2 class="contact-page-content-title">
+            <span class="contact-page-content-title__part">Start </span>
+            <span class="contact-page-content-title__part">the project</span>
+          </h2>
+          <p class="contact-page-content-text">
+            Don’t like forms? Send us an
+            <a href="mailto:hello@arsdata.io" class="form-radio-box-lable__link">email</a>.
+          </p>
+        </div>
+        <div class="contact-page-content contact-page-content_2">
+          <form class="form" id="contact-form">
+            <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
+            <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
+            <div class="form-textarea-box">
+              <textarea id="formmessage" name="message" id="message-textarea" cols="30" rows="3" placeholder="Message"
+                required></textarea>
+              <!-- <button class="form-textarea-box__btn" id="submit-button">Send</button> -->
+              <button class="home__startbtn blue-link" id="submit-button">Send</button>
+            </div>
+            <div class="form-radio-box">
+              <p>
+                <input class="form-radio-box__radio" type="checkbox" name="termsAndConditions" id="termsAndConditions">
+                <label class="form-radio-box-lable" for="termsAndConditions">By clicking the button above, I agree
+                  with
+                  <a href="" target="_blanc" class="form-radio-box-lable__link">Terms of Service</a> and
+                  <a href="" target="_blanc" class="form-radio-box-lable__link">Privacy Policy</a>
+              </p>
+              </label>
+            </div>
+          </form>
+          <div id="formsubmit"></div>
         </div>
       </div>
     </section>
 
-    <footer class="footer">
-      <div class="container footer-content">
-        <a href="index.html" class="footer-content__logo">
-          <img src="images/logos/logo-blue.svg" alt="ARS Data logo">
-        </a>
-        <p class="footer-content__copyright">© 2019 ARS DATA</p>
-      </div>
-    </footer>
   </main>
 
   <!--build:js js/main.min.js -->
