--- a/app/contacts.html
+++ b/app/contacts.html
@@ -11,7 +11,8 @@
   <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
-<body id="contact-page">
+<body>
+  <img class="contact-page-bg" src="./images/illustrations/contact-page-bg-img.svg" alt="">
 
   <header class="header">
     <div class="container flex-between">
@@ -51,6 +52,7 @@
           </p>
         </div>
         <div class="contact-page-content contact-page-content_2">
+          <!-- <p class="contact-content-form__text text"></p> -->
           <form class="form" id="contact-form">
             <input id="formname" name="name" type="text" class="form__input" type="text" placeholder="Name" required>
             <input id="formemail" name="email" type="email" class="form__input" placeholder="Email" required>
