--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/main.css">
   <!-- <link rel="stylesheet" href="css/var.css"> -->
   <!--endbuild-->
-  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png"/>
+  <link rel="shortcut icon" type="image/png" href="./images/Icon/favicon-16x16.png" />
 </head>
 
 <body>
@@ -185,10 +185,10 @@
         <div class="contact-content">
 
           <div class="contact-content-info">
-            <h2 class="contact-content-info__caption caption">Contact us</h2>
-            <p class="contact-content-info__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+            <h2 class="contact-content-info__caption">Let's talk</h2>
+            <!-- <p class="contact-content-info__text text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
               eiusmod tempor
-              consectetur</p>
+              consectetur</p> -->
             <p class="contact-content-info__location text">United States 3030<br>
               N. ROCKY POINT DR. STE 150A</p>
             <p class="contact-content-info__location text">Ukraine, 15 Borisohlibska Str, Kyiv</p>
