mobile menu done

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,7 @@
         </a>
 
         <div class="navigation-desktop">
+          <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item" href="#about">About us</a>
           <a class="navigation-desktop__item" href="/services.html">Solutions</a>
           <a class="navigation-desktop__item" href="#technology">Technology</a>
