--- a/app/index.html
+++ b/app/index.html
@@ -244,6 +244,15 @@
     </footer>
   </main>
 
+  <div id="cookies-popup" class="cookies-popup flex-between">
+    <p class="cookies-popup-text">
+      We use cookies to improve your experience with our site, including analytics and personalisation.
+      By continuing to use the service, you agree to our use of cookies as described in the 
+      <a href="" target="_blanc" class="cookies-popup-text__link">Cookie Policy</a>.
+    </p>
+    <button type="button" class="home__startbtn blue-link">accept</button>
+  </div>
+
 
   <!--build:js js/main.min.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
