--- a/app/contacts.html
+++ b/app/contacts.html
@@ -19,15 +19,16 @@
       <a href="index.html" class="header__logo">
         <img src="images/logos/logo-white.svg" alt="ARS Data logo">
       </a>
-
+  
       <nav class="navigation" id="navigation">
         <a aria-label="mobile menu" class="navigation-mobile">
           <span></span>
           <span></span>
           <span></span>
         </a>
-
+  
         <div class="navigation-desktop">
+          <img src="images/logos/logo-white.svg" alt="ARS Data logo" class="navigation-desktop__logo">
           <a class="navigation-desktop__item" href="#about">About us</a>
           <a class="navigation-desktop__item" href="/services.html">Solutions</a>
           <a class="navigation-desktop__item" href="#technology">Technology</a>
