Privacy Policy done

--- a/app/privacy-policy.html
+++ b/app/privacy-policy.html
@@ -39,8 +39,147 @@
 
   <main>
 
-    <section class="">
-      <div class="container flex-center">
+    <section class="policy">
+      <div class="container">
+
+        <div class="policy-content flex-between">
+          <div class="policy-content-column-1">
+            <h1 class="policy-content__title">Privacy Policy</h1>
+            <div class="policy-content-paragraph">
+              <h3 class="policy-content-paragraph__title">We collect the following data:</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                Personal identification information which help us to communicate with you: name, email address, location
+                data (obtained
+                from your IP address), etc.
+              </p>
+            </div>
+            <div class="policy-content-paragraph policy-content-paragraph_small">
+              <h3 class="policy-content-paragraph__title">How do we collect your data?</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                You directly provide us with most of the data we collect:
+              </p>
+            </div>
+            <div class="policy-content-paragraph">
+              <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
+                <li class="policy-content-paragraph-list__item">
+                  When you fill in the contact form, found in the "Let's talk" section.
+                </li>
+                <li class="policy-content-paragraph-list__item">
+                  When you use or view our website via your browser’s cookies. (please see
+                  <a href="./cookie-policy.html" class="policy-content-email__mail">Cookie policy</a>
+                  for details)
+                </li>
+                <li class="policy-content-paragraph-list__item">
+                  When you share documents or files delivered via emails or by sending personal messages directly to our
+                  representatives.
+                </li>
+              </ul>
+            </div>
+            <div class="policy-content-paragraph">
+              <h3 class="policy-content-paragraph__title">Our Company may also receive your data indirectly from the
+                following sources:</h3>
+              <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
+                <li class="policy-content-paragraph-list__item">
+                  Open sources, like public websites or social media
+                </li>
+                <li class="policy-content-paragraph-list__item">
+                  3rd parties like recruiting agencies
+                </li>
+              </ul>
+            </div>
+            <div class="policy-content-paragraph policy-content-paragraph_small">
+              <h3 class="policy-content-paragraph__title">How will we use your data?</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                Our Company collects your data so that we can:
+              </p>
+            </div>
+            <div class="policy-content-paragraph">
+              <ul class="policy-content-paragraph-list policy-content-paragraph-list_mb">
+                <li class="policy-content-paragraph-list__item">
+                  Respond to any requests you submit through our contact forms ("Let's talk" section).
+                </li>
+                <li class="policy-content-paragraph-list__item">
+                  Email you with special offers on other products and services we think you might like.
+                </li>
+              </ul>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                If you agree, we will share your data with our partner companies so that they may offer you their
+                products and services.
+              </p>
+            </div>
+            <div class="policy-content-paragraph">
+              <h3 class="policy-content-paragraph__title">How do we store your data?</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                We apply reasonable procedures and security measures to avoid unauthorised access, loss, disclosure or
+                amendment of the
+                personal data.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                We will store your data for the reasonable period of time. Once this time period has expired, your data
+                will be deleted.
+              </p>
+            </div>
+          </div>
+
+          <div class="policy-content-column-2">
+            <p class="policy-content__text">
+              This privacy policy will explain how Ars Data LLC uses the personal data we collect from you when you use
+              our website.
+            </p>
+            <div class="policy-content-paragraph">
+              <h3 class="policy-content-paragraph__title">What are your data protection rights?</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                Our Company would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to
+                the following:
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to access – You have the right to request us for copies of your personal data. We may charge you a small fee
+                for this service.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to rectification – You have the right to request that we correct any information you believe is inaccurate.
+                You also have the right to request us to complete the information you believe is incomplete.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to erasure – You have the right to request that we erase your personal data, under certain conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to restrict processing – You have the right to request us to restrict the processing of your personal data,
+                under certain conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to object to processing – You have the right to object to us processing of your personal data, under certain
+                conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                The right to data portability – You have the right to request that we transfer the data that we have collected to
+                another organization, or directly to you, under certain conditions.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please
+                contact us at our email:
+                <a href="mailto:hello@arsdata.io" class="policy-content-email__mail">hello@arsdata.io</a>
+              </p>
+            </div>
+            <div class="policy-content-paragraph">
+              <h3 class="policy-content-paragraph__title">Changes to our privacy policy</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                We keep our privacy policy under regular review and places any updates on this web page. This privacy policy was last
+                updated on 20 April 2019.
+              </p>
+            </div>
+            <div class="policy-content-paragraph policy-content-paragraph_small">
+              <h3 class="policy-content-paragraph__title">How to contact us</h3>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                If you have any questions about our privacy policy, the data we hold on you, or you would like to exercise one of your
+                data protection rights, please do not hesitate to contact us.
+              </p>
+              <p class="policy-content-paragraph__text policy-content__text_small">
+                Email us at: <a href="mailto:hello@arsdata.io" class="policy-content-email__mail">hello@arsdata.io</a>
+              </p>
+            </div>
+          </div>
+        </div>
 
       </div>
     </section>
